--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SampleApp</title>
-  <%= csrf_meta_tags %>
+  <title><%= yield(:title) %> | Ruby on Rails Tutorial Sample App</title>
+  <!--下面三句話是Rails生成的-->
+  <%= csrf_meta_tags %><!--避免跨站请求伪造（Cross-Site Request Forgery，简称 CSRF，一种
+恶意网络攻击）-->
 
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
-<%= yield %>
+<%= yield %><!--把每个页面的内容插入布局中。-->
 </body>
 </html>
