sample app chapter 5.2 Done.

--- a/sample_app/app/assets/stylesheets/application.css
+++ b/sample_app/app/assets/stylesheets/application.css
@@ -10,6 +10,8 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ * 把app/assets/stylesheets 目录中的所有 CSS 文件（包含子目录中的文件）都引入应用的 CSS 文件
  *= require_tree .
+ * 把application.css 这个文件中的 CSS 也加载进来
  *= require_self
  */
