--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -95,22 +95,23 @@ footer {
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $light-gray;
-  &:a {
+  a {
     color: $gray;
     &:hover {
       color: $gray-darker;
     }
   }
-  &: small {
+  small {
     float: left;
   }
-  &:ul {
+  ul {
     float: right;
     list-style: none;
-    &: li {
+    li {
       float: left;
       margin-left: 15px;
     }
   }
 }
+
 
