--- a/sample_app/app/assets/stylesheets/custom.scss
+++ b/sample_app/app/assets/stylesheets/custom.scss
@@ -11,6 +11,12 @@ $gray: #555;
 $gray-darker: #222;
 $white: #fff;
 
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 /* universal */
 /*页面的上内边距设为 60 像素*/
 body {
@@ -112,6 +118,16 @@ footer {
       margin-left: 15px;
     }
   }
+
+  /* miscellaneous */
+  .debug_dump {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
+  }
+
 }
 
 
