--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -8,8 +8,13 @@
 <body>
 <%= render 'layouts/header' %>
 <div class="container">
+  <%#= flush 变量%>
+  <% flash.each do |message_type, message| %>
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+  <% end %>
   <%= yield %>
   <%= render 'layouts/footer' %>
+  <%#= 调试参数 %>
   <%= debug(params) if Rails.env.development? %>
 </div>
 </body>
