--- a/sample_app/app/views/layouts/application.html.erb
+++ b/sample_app/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 <div class="container">
   <%#= flush 变量%>
   <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <!--<div class="alert alert-<%= message_type %>"><%= message %></div>-->
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
   <% end %>
   <%= yield %>
   <%= render 'layouts/footer' %>
