--- a/sample_app/app/views/users/edit.html.erb
+++ b/sample_app/app/views/users/edit.html.erb
@@ -3,6 +3,7 @@
 <h1>Update your profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+    <!--PATCH請求-->
     <%= render 'form' %>
 
     <div class="gravatar_edit">
