--- a/sample_app/app/views/users/new.html.erb
+++ b/sample_app/app/views/users/new.html.erb
@@ -4,6 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <!--引入表单-->
+    <!--POST請求-->
     <%= render 'form' %>
   </div>
 </div>
