--- a/sample_app/app/views/users/edit.html.erb
+++ b/sample_app/app/views/users/edit.html.erb
@@ -7,7 +7,7 @@
     <%= render 'form' %>
 
     <div class="gravatar_edit">
-      <%= gravatar_for @user %>
+      <%= gravatar_for @users %>
       <!--跳转-->
       <a href="http://gravatar.com/emails" target="_blank">change</a>
     </div>
