--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
-<% provide(:title, @user.name) %>
+<% provide(:title, @users.name) %>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= gravatar_for @user %>
-        <%= @user.name %>
+        <%= gravatar_for @users %>
+        <%= @users.name %>
       </h1>
     </section>
   </aside>
