--- a/sample_app/app/views/users/_user.html.erb
+++ b/sample_app/app/views/users/_user.html.erb
@@ -1,4 +1,9 @@
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
+  <% if current_user.admin? && !current_user?(user) %>
+      <%#= method: :delete  => 点击链接后发送的是DELETE 请求。%>
+      <%= link_to "delete", user, method: :delete,
+                  data: {confirm: "You sure?"} %>
+  <% end %>
 </li>
