sample app  chapter 11.2 done. 账户激活邮件

--- a/sample_app/app/views/layouts/mailer.text.erb
+++ b/sample_app/app/views/layouts/mailer.text.erb
@@ -1,1 +1,3 @@
-<%= yield %>
+Hi <%= @users.name %>,
+Welcome to the Sample App! Click on the link below to activate your account:
+<%= edit_account_activation_url(@users.activation_token, email: @users.email) %>
