--- a/sample_app/app/views/layouts/mailer.html.erb
+++ b/sample_app/app/views/layouts/mailer.html.erb
@@ -8,6 +8,13 @@
 </head>
 
 <body>
-<%= yield %>
+<h1>Sample App</h1>
+<p>Hi <%= @users.name %>,</p>
+<p>
+  Welcome to the Sample App! Click on the link below to activate your account:
+</p>
+<%= link_to "Activate", edit_account_activation_url(@users.activation_token,
+                                                    email: @users.email) %>
+
 </body>
 </html>
