sample app  chapter 12.2 done. 密码重设邮件

--- a/sample_app/app/views/layouts/mailer.html.erb
+++ b/sample_app/app/views/layouts/mailer.html.erb
@@ -8,13 +8,6 @@
 </head>
 
 <body>
-<h1>Sample App</h1>
-<p>Hi <%= @users.name %>,</p>
-<p>
-  Welcome to the Sample App! Click on the link below to activate your account:
-</p>
-<%= link_to "Activate", edit_account_activation_url(@users.activation_token,
-                                                    email: @users.email) %>
-
+<%= yield %>
 </body>
 </html>
