--- a/sample_app/app/views/layouts/mailer.text.erb
+++ b/sample_app/app/views/layouts/mailer.text.erb
@@ -1,3 +1,1 @@
-Hi <%= @users.name %>,
-Welcome to the Sample App! Click on the link below to activate your account:
-<%= edit_account_activation_url(@users.activation_token, email: @users.email) %>
+<%= yield %>
