--- a/sample_app/app/views/user_mailer/account_activation.html.erb
+++ b/sample_app/app/views/user_mailer/account_activation.html.erb
@@ -1,5 +1,10 @@
-<h1>User#account_activation</h1>
+<h1>Sample App</h1>
+
+<p>Hi <%= @users.name %>,</p>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/account_activation.html.erb
+  Welcome to the Sample App! Click on the link below to activate your account:
 </p>
+
+<%= link_to "Activate", edit_account_activation_url(@users.activation_token,
+                                                    email: @users.email) %>
