sample app  chapter 12.3 done. 重设密码

--- a/sample_app/app/views/password_resets/edit.html.erb
+++ b/sample_app/app/views/password_resets/edit.html.erb
@@ -6,6 +6,7 @@
     <%= form_for(@users, url: password_reset_path(params[:id])) do |f| %>
         <%= render 'shared/error_messages' %>
 
+        <%#= 表单标签辅助方法 %>
         <%= hidden_field_tag :email, @users.email %>
 
         <%= f.label :password %>
