--- a/sample_app/app/views/static_pages/home.html.erb
+++ b/sample_app/app/views/static_pages/home.html.erb
@@ -1,20 +1,6 @@
 <!-- Embedded Ruby => ERb -->
-<div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
-  <h2>
-    This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-</div>
-<%= link_to image_tag("rails.png", alt: "Rails logo"),
-            'http://rubyonrails.org/' %>
-<%#= 注释 %>
-<%#= link_to image_tag("kitten.png", alt: "kitten"),
-            '#' %>
-<p>
-  This is the home page for the
-  <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-  sample application.
-</p>
+<% if logged_in? %>
+    <%= render 'userinfo' %>
+<% else %>
+    <%= render 'signup' %>
+<% end %>
