sample app  chapter 14.2.3 done. 我关注的用户列表页面和关注我的用户列表页面

--- a/sample_app/app/views/users/show.html.erb
+++ b/sample_app/app/views/users/show.html.erb
@@ -7,8 +7,12 @@
         <%= @users.name %>
       </h1>
     </section>
+    <section class="stats">
+      <%= render 'shared/stats' %>
+    </section>
   </aside>
   <div class="col-md-8">
+    <%= render 'follow_form' if logged_in? %>
     <% if @users.microposts.any? %>
         <h3>Microposts (<%= @users.microposts.count %>)</h3>
         <ol class="microposts">
